--- a/Python/new_workflow/download_launches.ipynb
+++ b/Python/new_workflow/download_launches.ipynb
@@ -342,18 +342,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Volumes/ExtremeSSD1TB/Developer/GitHub/KSCRocketSeismoHydrology/Python/new_workflow\n",
+      "Merged CSV saved as merged_launches.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/y1/0ksm02_j05q2mdjsdf6j7xj80000gp/T/ipykernel_66833/3066073786.py:42: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df_merged[bool_columns] = df_merged[bool_columns].fillna(False)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "print(os.getcwd())\n",
     "\n",
     "# --- Step 1: Read the CSV files ---\n",
-    "#df_ksc = pd.read_csv(\"Python/new_workflow/ksc_launch_events_filtered.csv\", parse_dates=[\"window_start\", \"window_end\"])\n",
-    "df_ksc = pd.read_csv(\"all_florida_launches.csv\", parse_dates=[\"window_start\", \"window_end\", \"net\"])\n",
-    "df_spacex = pd.read_csv(\"Python/new_workflow/spacex_launches_landings.csv\", parse_dates=[\"launch_time\"])\n",
+    "df_ksc = pd.read_csv(\"ksc_launch_events_filtered.csv\", parse_dates=[\"window_start\", \"window_end\"])\n",
+    "#df_ksc = pd.read_csv(\"all_florida_launches.csv\", parse_dates=[\"window_start\", \"window_end\", \"net\"])\n",
+    "df_spacex = pd.read_csv(\"spacex_launches_landings.csv\", parse_dates=[\"launch_time\"])\n",
     "\n",
     "# --- Step 2: Prepare for Cross Join ---\n",
     "# Create a temporary key to do a cross join.\n",
@@ -395,7 +412,7 @@
     "df_merged[str_cols] = df_merged[str_cols].fillna(\"\")\n",
     "\n",
     "# --- Step 4: Save the Merged DataFrame ---\n",
-    "df_merged.to_csv(\"Python/new_workflow/merged_launches.csv\", index=False)\n",
+    "df_merged.to_csv(\"merged_launches.csv\", index=False)\n",
     "print(\"Merged CSV saved as merged_launches.csv\")"
    ]
   }
