KSC events now being detected. reshuffled

--- a/0_utils/process_soh.ipynb
+++ b/0_utils/process_soh.ipynb
@@ -78,35 +78,36 @@
     "\n",
     "        fh.suptitle(f\"SOH data plot {i} for {station} for {year}\") \n",
     "        plt.show()\n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    sdsdir = '/data/SDS'\n",
+    "    year='2022'\n",
+    "    network = 'FL'\n",
+    "    #dict_of_df = dict()\n",
+    "    for stationdir in sorted(glob.glob(os.path.join(sdsdir, year, network, '*'))):\n",
+    "        print(stationdir)\n",
+    "        station = os.path.basename(stationdir)\n",
+    "        filedir = os.path.join(stationdir, 'SOH.S')\n",
+    "        if os.path.isdir(filedir):\n",
+    "            lod = []\n",
+    "            for juldayint in range(367):\n",
+    "                julday = f'{juldayint:03d}'\n",
     "\n",
-    "sdsdir = '/data/SDS'\n",
-    "year='2022'\n",
-    "network = 'FL'\n",
-    "#dict_of_df = dict()\n",
-    "for stationdir in sorted(glob.glob(os.path.join(sdsdir, year, network, '*'))):\n",
-    "    print(stationdir)\n",
-    "    station = os.path.basename(stationdir)\n",
-    "    filedir = os.path.join(stationdir, 'SOH.S')\n",
-    "    if os.path.isdir(filedir):\n",
-    "        lod = []\n",
-    "        for juldayint in range(367):\n",
-    "            julday = f'{juldayint:03d}'\n",
+    "                sdsfile = os.path.join(filedir, f'{network}.{station}.D0.SOH.S.{year}.{julday}.miniseed')\n",
+    "                if not os.path.isfile(sdsfile): \n",
+    "                    sdsfile = os.path.join(filedir, f'{network}.{station}.D0.SOH.S.{year}.{julday}')\n",
+    "                if os.path.isfile(sdsfile):\n",
+    "                    #print(sdsfile) \n",
+    "                    st = obspy.read(sdsfile, format='MSEED')\n",
+    "                    #st.plot(equal_scale=False);\n",
+    "                    #plot_soh(st, df)\n",
+    "                    avdict = get_averages(st, df)\n",
+    "                    lod.append(avdict)\n",
+    "            station_year_soh_df = pd.DataFrame(lod)\n",
+    "            csvfile = f'soh_{network}_{year}_{station}.csv'\n",
+    "            station_year_soh_df.round(5).to_csv(csvfile)\n",
     "\n",
-    "            sdsfile = os.path.join(filedir, f'{network}.{station}.D0.SOH.S.{year}.{julday}.miniseed')\n",
-    "            if not os.path.isfile(sdsfile): \n",
-    "                sdsfile = os.path.join(filedir, f'{network}.{station}.D0.SOH.S.{year}.{julday}')\n",
-    "            if os.path.isfile(sdsfile):\n",
-    "                #print(sdsfile) \n",
-    "                st = obspy.read(sdsfile, format='MSEED')\n",
-    "                #st.plot(equal_scale=False);\n",
-    "                #plot_soh(st, df)\n",
-    "                avdict = get_averages(st, df)\n",
-    "                lod.append(avdict)\n",
-    "        station_year_soh_df = pd.DataFrame(lod)\n",
-    "        csvfile = f'soh_{network}_{year}_{station}.csv'\n",
-    "        station_year_soh_df.round(5).to_csv(csvfile)\n",
-    "\n",
-    "        plot_soh_year(station, year, station_year_soh_df, df)\n"
+    "            plot_soh_year(station, year, station_year_soh_df, df)\n"
    ]
   }
  ],
